recenter tables left of sidebar

--- a/feedalerts/n4f2/static/n4f2/style.css
+++ b/feedalerts/n4f2/static/n4f2/style.css
@@ -19,6 +19,7 @@ table.n4f2 {
      border-color: #E1EEF4;
      width: 800px;
      display: inline;
+     padding-left: 130px;
 }
 th { 
     font-family: "Times Roman", serif;
