--- a/feedalerts/n4f2/static/n4f2/style.css
+++ b/feedalerts/n4f2/static/n4f2/style.css
@@ -15,7 +15,6 @@ body {
 }
 table.n4f2 { 
     border-collapse: collapse;
-    border: 1px solid;
     border-color: #E1EEF4;
     width: 800px;
     display: inline;
@@ -70,4 +69,35 @@ table.legend {
     border: 1px solid;
     border-color: #E1EEF4;
     width: 300px;
+}
+div.login {
+    padding-left: 130px;    
+}
+
+.form-login {
+    background-color: #EDEDED;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+    border-color:#d2d2d2;
+    border-width: 5px;
+    box-shadow:0 1px 0 #cfcfcf;
+}
+
+h4 { 
+ border:0 solid #fff; 
+ border-bottom-width:1px;
+ padding-bottom:10px;
+ text-align: center;
+ font-weight: bolder;
+}
+
+.form-control {
+    border-radius: 10px;
+}
+
+.wrapper {
+    text-align: center;
 }
