correct login/logout button

--- a/feedalerts/n4f2/templates/n4f2/base.html
+++ b/feedalerts/n4f2/templates/n4f2/base.html
@@ -16,7 +16,12 @@
             <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Complete')">Complete</button>
             <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'abandon')">Abandoned</button>
             <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'hooklogic')">HookLogic</button>
+            </br>
+            {% if user.is_authenticated %}
             <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/logout/'">Log Out</button>
+            {% else %}
+            <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/login/'">Log In</button>
+            {% endif %}
         </div>
         <div>
             {% block content %}{% endblock %}
