--- a/feedalerts/n4f2/templates/n4f2/index.html
+++ b/feedalerts/n4f2/templates/n4f2/index.html
@@ -43,19 +43,19 @@
                     <th>Notification&nbsp;Sent</th>
                 </tr>
             {% for feed in feedruns %}   
-            {% if feed.status_code == "ERROR" or feed.status_code == "ERROR_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS" %}
-                    <tr class="bad">
-                                <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</a></center></td>
-                                <td data-toggle="collapse" data-target=#{{ feed.id }}><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
-                                <td><center>{{ feed.last_received }}</center></td>
-                                <td><center><a href= {{ feed.console_link }} target="_blank">{{ feed.status_code }}</a></center></td>
-                                <td><center>{{ feed.last_success }}</center></td>
-                                <td vertical-align: top;><center><input class="checkbox" type="checkbox" id=checkbox_{{ feed.id }} {% if feed.notification_sent == True %} checked="checked"{% endif %}></center></td>
-                    </tr>
-                    <tr class="bad">
-                            <td colspan="6"><div id={{ feed.id }} class="collapse" style="padding: 5px">{{ feed.status_summary }}</div></td>
-                    </tr>
-            {% endif %}
+                {% if feed.last_received >= feed_run_report.time_settings.dontReport and feed.status_code == "ERROR" or feed.last_received >= feed_run_report.time_settings.dontReport and feed.status_code == "COMPLETE_WITH_FATAL_ERRORS" %}
+                        <tr class="bad">
+                                    <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</a></center></td>
+                                    <td data-toggle="collapse" data-target=#{{ feed.id }}><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
+                                    <td><center>{{ feed.last_received }}</center></td>
+                                    <td><center><a href= {{ feed.console_link }} target="_blank">{{ feed.status_code }}</a></center></td>
+                                    <td><center>{{ feed.last_success }}</center></td>
+                                    <td vertical-align: top;><center><input class="checkbox" type="checkbox" id=checkbox_{{ feed.id }} {% if feed.notification_sent == True %} checked="checked"{% endif %}></center></td>
+                        </tr>
+                        <tr class="bad">
+                                <td colspan="6"><div id={{ feed.id }} class="collapse" style="padding: 5px">{{ feed.status_summary }}</div></td>
+                        </tr>
+                {% endif %}
             {% endfor %}
             </table>
             </div>
@@ -69,14 +69,14 @@
                         <th>Status Message</th>
                     </tr>
             {% for feed in feedruns %}
-            {% if feed.status_code == "COMPLETE_LATE" %}
-            <tr class="delayed">
-                <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
-                <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
-                <td><center>{{ feed.last_received }}</center></td>
-                <td><center>{{ feed.status_code }}</center></td>
-            </tr>
-            {% endif %}
+                {% if feed.status_code == "COMPLETE_LATE" and feed.last_received >= feed_run_report.time_settings.dontReport %}
+                    <tr class="delayed">
+                        <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                        <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
+                        <td><center>{{ feed.last_received }}</center></td>
+                        <td><center>{{ feed.status_code }}</center></td>
+                    </tr>
+                {% endif %}
             {% endfor %}
             </table>
             </div>
@@ -90,14 +90,14 @@
                         <th>Status Message</th>
                     </tr>
             {% for feed in feedruns %}
-            {% if feed.status_code == "COMPLETE" %}
-            <tr class="ok">
-                <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
-                <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
-                <td><center>{{ feed.last_received }}</center></td>
-                <td><center>{{ feed.status_code }}</center></td>
-            </tr>
-            {% endif %}
+                {% if feed.status_code == "COMPLETE" and feed.last_received >= feed_run_report.time_settings.dontReport %}
+                    <tr class="ok">
+                        <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                        <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
+                        <td><center>{{ feed.last_received }}</center></td>
+                        <td><center>{{ feed.status_code }}</center></td>
+                    </tr>
+                {% endif %}
             {% endfor %}
             </table>
             </div>
@@ -110,13 +110,15 @@
                         <th>Feed Date</th>
                         <th>Status Message</th>
                     </tr>
-            {% for feed in lateruns %}
-                    <tr class="abandon">
-                        <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
-                        <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
-                        <td><center>{{ feed.last_received }}</center></td>
-                        <td><center>{{ feed.status_code }}</center></td>
-                    </tr>
+            {% for feed in feedruns %}
+                {% if feed.last_received < feed_run_report.time_settings.dontReport %}
+                        <tr class="abandon">
+                            <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                            <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
+                            <td><center>{{ feed.last_received }}</center></td>
+                            <td><center>{{ feed.status_code }}</center></td>
+                        </tr>
+                {% endif %}
             {% endfor %}
                 </table>
             </div>
