add change pwd button

--- a/feedalerts/n4f2/templates/n4f2/base.html
+++ b/feedalerts/n4f2/templates/n4f2/base.html
@@ -19,6 +19,7 @@
             </br>
             {% if user.is_authenticated %}
             <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/logout/'">Log Out</button>
+            <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/password_change/'">Change Password</button>
             {% endif %}
         </div>
         <div>
