highlight nav items on hover

--- a/feedalerts/n4f2/static/n4f2/style.css
+++ b/feedalerts/n4f2/static/n4f2/style.css
@@ -38,6 +38,12 @@ td {
     border-color: #E1EEF4;
     padding: 0px 3px;
 }
+
+td.errorMessage:hover {
+    color: #808080;
+    cursor: pointer;
+}
+
 tr.ok { 
     background-color: #c0ffc0;
     border-color: #E1EEF4;
@@ -96,6 +102,15 @@ h4 {
 
 a.title {
     color: #ffffff;
+    text-decoration: none;
+}
+
+a.title:hover {
+    color: #808080;
+}
+
+button.tablink:hover {
+    color: #808080;
 }
 
 .form-control {
