--- a/feedalerts/n4f2/templates/n4f2/base.html
+++ b/feedalerts/n4f2/templates/n4f2/base.html
@@ -20,8 +20,8 @@
                 <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'abandon')">Abandoned</button>
                 </br>
                 {% endif %}
-            <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/logout/'">Log Out</button>
-            <button class="w3-bar-item w3-button" onclick="window.location.href='/accounts/password_change/'">Change Password</button>
+            <button class="w3-bar-item w3-button tablink" onclick="window.location.href='/accounts/logout/'">Log Out</button>
+            <button class="w3-bar-item w3-button tablink" onclick="window.location.href='/accounts/password_change/'">Change Password</button>
             {% endif %}
         </div>
         <div>
